pkms-frontend/src/index.css
.error {
  color: red;
}

.notes-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  gap: 1rem;
  list-style: none;
  padding: 0;
}

.note {
  background-color: lightgray;
  border-radius: 2px;
  padding: 10px;
}

.tags {
  border: 1px black solid;
  border-radius: 2px;
  background-color: lightblue;
  margin: 2px;
  padding: 2px;
}

.delete-button {
  margin: 10px;
}

